--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,63 @@ body{
   background-color:#edede9;
 }
 
+.cards{
+  /* border: 2px solid red; */
+  width: 300px;
+  height: 410px;
+  /* display: inline-block; */
+  margin:60px;
+  border-radius: 1rem;
+  background-color:#fff;
+  
+}
+
+.card{
+  /* border: 2px solid green; */
+  /* flex-wrap: wrap; */
+  width: 100%;
+  height: 100%;
+  
+}
+
+.card_img{
+  border: 2px solid black;
+  width: 100%;
+  height:275px;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+
+}
+
+.card_info{
+  /* border: 2px solid yellow; */
+  width:90%;
+  height: 20%;
+  margin: 1rem;
+  /* margin-left: 1rem; */
+
+}
+
+.card_category{
+  color: grey;
+  letter-spacing:3px;
+  text-transform: uppercase;
+  font-size: 15px;
+
+}
+
+.card_title{
+  text-transform: capitalize;
+  font-size: 25px;
+  margin: 10px 0;
+
+}
+
+button{
+  color: gray;
+  text-transform: uppercase;
+  cursor: pointer;
+  
+}
+
+
